gcc/testsuite/g++.dg/parse/error22.C
// PR c++/15786

struct A {
  void foo(bar* p); /* { dg-error "declared" } */
};
